Close AI-Chart phase 1
